scratch/driver-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debian-deployment
  labels:
    app: debian-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: debian-app
  template:
    metadata:
      labels:
        app: debian-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - debian-app
            topologyKey: kubernetes.io/hostname
      containers:
      - name: debian-container
        image: debian:latest
        command: ["/bin/sh", "-c", "--"]
        args: ["while true; do sleep 30; done;"]
        securityContext:
          privileged: true
        volumeMounts:
        - name: dri
          mountPath: /dev/dri
      volumes:
      - name: dri
        hostPath:
          path: /dev/dri
          type: Directory
