scratch/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway-test
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  gatewayClassName: cilium
  listeners:
  - name: external-gateway-http
    port: 80
    protocol: HTTP
    hostname: "*.invertedorigin.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: https-1
    protocol: HTTPS
    port: 443
    hostname: "*.invertedorigin.com"
    tls:
      certificateRefs:
      - kind: Secret
        name: tls-gateway-test-cert
