scratch/ha.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: >-
      apps-homeassistant:gateway.networking.k8s.io/HTTPRoute:homeassistant/homeassistant-main
  labels:
    app.kubernetes.io/instance: homeassistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homeassistant
    helm.sh/chart: app-template-3.2.1
  name: homeassistant-main
  namespace: homeassistant
spec:
  hostnames:
    - ha.invertedorigin.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: tls-default-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: homeassistant
          namespace: default
          port: 8123
          weight: 1
